fixed accordion z-index

--- a/css/reynolds_sbit_cat_welding.css
+++ b/css/reynolds_sbit_cat_welding.css
@@ -188,7 +188,7 @@ ul.breadcrumb-trail {
     padding: 15px var(--set-02) 20px var(--set-02);
     border-radius: 0px 0px 0px 0px;
     height: 55px;
-    z-index: 1;
+    z-index: 1 !important;
 }
 .accordion-button:not(.collapsed)::after {
     filter: brightness(0%);
